# PluralSync

./: .gitignore  AGENTS.md  ARCHITECTURE.source-agnostic.md  COPYING  Cargo.toml  GEMINI.md  IMPLEMENTATION.pluralkit-webhook.md  PREREQUISITES.source-agnostic.md  README.md  TASKS.md  TODO.account-deletion.md  TODO.announcements.md  TODO.autoupdate.md  TODO.emails.md  TODO.history.md  TODO.md  TODO.password-reset.md  TODO.pluralkit-webhook-forwarding.md  TODO.pluralkit-webhooks.md  TODO.quality.md  TODO.source-agnostic-updates.md  TODO.system-member-display.md  build.rs  package-lock.json  websocket.TODO.md  websocket.spec.md
.sqlx/: query-108bd98d330e07ed50edd9765e02cd0fd0c36e3563c2b2bf906619a74d4e7017.json  query-2151d17e8718d0de7347fe03e5ee8b66a820b72884073e2faecfa67430021676.json  query-227759066c54a8a09d056c5f218ead3b5f9966fce03216394f5b508b0778b604.json  query-29c60167b50dc3eebd972ede8ee5ee1a8c8c374d11a0327181e90128c73ec599.json  query-324b5304ea9d47bc33afc916eeb7b0672dd2df04d5f621f23f6dc59908f608f8.json  query-409a03096dbf3aa46743e99138b75e9417a80ce0e051fd4d0934754577935833.json  query-41b93d406da87b0722516f6a1729ccb28078afa8f950449182f188987e7bfc68.json  query-47493bc4135350b1cb349f6272272e347c3d1a512e324afe4839d647cdf9f8f7.json  query-4a783171aa4c1fa1eeecea29870e37346eb46d8d8702d9f1733f86c105928309.json  query-5301ad190188e021bfa01965f419be8a90753da8da85d104a1d364ace5e059b4.json  query-53ddc5d045b4956e5b90c96b3c6f16aedc8f7a374be54f520564fb6186c49394.json  query-572980aed2246321876326c5a82af7922931ee4720d4da2f63430be55d3b314b.json  query-6e90f1c5fd1950925db2b1b12220e0b6d36ea8e94164ab66f2c47508fb3737ab.json  query-6f95bb0541887c2750d809277ceed5026ed521a138b94965fac247492c425e34.json  query-7171bfacc92cd6994b2dc885b3d8378ce9bbe8c8712836ab59f627644874af30.json  query-854dc9654303f4346efc6ec1ba906f5ad4cee9f4ed35d3e99b8048527bd410e2.json  query-88b8ac0203da1e1632b467e334940193f12e58d4b204057b0fa7048d94071748.json  query-89b8a3fa70daaa40f714512956e72188a9b8a622a3c3591b120bdb649a9c9415.json  query-8c08440f50880e41647408816e5d7efb410bfb1ba8f4f0a17badbe6c03eb76d1.json  query-8ecbb854f842c8c3abf40e50bc89e5595de35b9863921132763f42caf7af944b.json  query-93736fe7131b5c954775df3621edf1e4871e5d8353418cdf40ec09a62dacd8da.json  query-967bf2e5b4d2e11a7dbce65a2845a4f72579a2e75b30ede7f60a0a0be9d48048.json  query-971010fa0abb8841a8daf246b17cec17383339e06c3731bb7d3475d7c4e0f519.json  (+13 more)
base-src/: Cargo.toml  build.rs
(+157 files in other folders)
