[package]
name = "pluralsync"
version = "2.89.0"
edition = "2024"
rust-version = "1.90.0"

[[bin]]
name = "pluralsync"
path = "src/main.rs"

[[bin]]
name = "ts-bindings"
path = "src/bin/ts-bindings.rs"

[[bin]]
name = "pluralsync-global-manager"
path = "src/bin/pluralsync-global-manager.rs"

[[bin]]
name = "announcement-archive-generator"
path = "src/bin/announcement-archive-generator.rs"

[dependencies]
derive_more = { version = "*", features = ["debug", "display"] }
lettre = { version = "*", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "ring",
    "rustls-platform-verifier",
    "smtp-transport",
    "serde",
    "dkim",
] }
pluralsync-base = { path = "base-src" }
chrono = { version = "*", features = ["serde"] }
either = "*"
anyhow = "*"
encoding_rs = "*"
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
vrchatapi = "*"
html-escape = "*"
tokio = { version = "*", features = ["full"] }
log = "*"
env_logger = "*"
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
    "macros",
] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
strum = "*"
strum_macros = "*"
argon2 = "*"
jsonwebtoken = { version = "*", default-features = false, features = [
    "rust_crypto",
] }
rand = "*"
sha2 = "*"
rocket = { version = "*", default-features = false, features = [
    "json",
    "http2",
] }
version-compare = "*"
specta = { version = "*", default-features = false, features = ["typescript"] }
specta-typescript = "*"
rocket_cors = { version = "*", default-features = false }
rocket_ws = "*"
# using later version to ensure same cookie_store is used as in reqwest
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
base64 = "*"
prometheus = "*"
rocket_prometheus = "*"
once_cell = "*"
tokio-tungstenite = { version = "*", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
    "handshake",
] }
futures = "*"
tokio-cron-scheduler = "*"
uuid = { version = "*", features = ["serde"] }
itertools = "*"

[build-dependencies]
dotenvy = "*"
